<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    android:padding="20dp"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginLeft="20dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin"
            android:layout_marginTop="140dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstnameTextInputLayout"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:textColorHint="@color/abuterang"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstnameEditText"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:backgroundTint="#EDEDED"
                android:hint="First Name"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/poppin"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameTextInputLayout"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:textColorHint="@color/abuterang"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameEditText"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/poppin"
                android:hint="Last Name"
                android:backgroundTint="#EDEDED"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:textColorHint="@color/abuterang"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:background="@drawable/buttonshape"
                android:backgroundTint="#EDEDED"
                android:hint="Username"
                android:fontFamily="@font/poppin"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:textColorHint="@color/abuterang"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonshape"
                android:hint="Password"
                android:fontFamily="@font/poppin"
                android:backgroundTint="#EDEDED"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ingat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:fontFamily="@font/poppin"
                android:text="@string/ingat"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin"
                android:text="@string/terms"
                android:layout_marginLeft="2dp"
                android:textColor="@color/hijauterang"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin"
                android:text="@string/and"
                android:layout_marginLeft="2dp"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin"
                android:text="@string/conditions"
                android:layout_marginLeft="2dp"
                android:textColor="@color/hijauterang"
                android:textSize="10sp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppin"
            android:textSize="14sp"
            android:textColor="@color/navy"
            android:backgroundTint="@color/hijauterang"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>
